--- a/Modal-JavaScript-Project-master/index.html
+++ b/Modal-JavaScript-Project-master/index.html
@@ -180,10 +180,10 @@ https://www.iconfinder.com/korawan_m
       </div>
       <!--end of filter buttons -->
       <!-- store  items-->
-      <div class="row" id="store-items">
+      <div class="row" class="store-items" id="store-items">
         <!-- single item -->
         <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item sweets" data-item="sweets">
-          <div class="card">
+          <div class="card ">
             <div class="img-container">
               <img src="img/sweets-1.jpeg" class="card-img-top store-img" alt="">
               <span class="store-item-icon">
@@ -248,7 +248,7 @@ https://www.iconfinder.com/korawan_m
         </div>
         <!--end of single store item-->
         <!-- single item -->
-        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item doughnuts" data-item="doughnuts">
+        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item doughnuts" data-item="dougnuts">
           <div class="card ">
             <div class="img-container">
               <img src="img/doughnut-1.jpeg" class="card-img-top store-img" alt="">
@@ -258,7 +258,7 @@ https://www.iconfinder.com/korawan_m
             </div>
             <div class="card-body">
               <div class="card-text d-flex justify-content-between text-capitalize">
-                <h5 id="store-item-name">doughnut item</h5>
+                <h5 id="store-item-name">dougnut item</h5>
                 <h5 class="store-item-value">$ <strong id="store-item-price" class="font-weight-bold">5</strong></h5>
 
               </div>
@@ -336,7 +336,7 @@ https://www.iconfinder.com/korawan_m
         </div>
         <!--end of single store item-->
         <!-- single item -->
-        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item doughnuts" data-item="doughnuts">
+        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item doughnuts" data-item="dougnuts">
           <div class="card ">
             <div class="img-container">
               <img src="img/doughnut-2.jpeg" class="card-img-top store-img" alt="">
@@ -346,7 +346,7 @@ https://www.iconfinder.com/korawan_m
             </div>
             <div class="card-body">
               <div class="card-text d-flex justify-content-between text-capitalize">
-                <h5 id="store-item-name">doughnut item</h5>
+                <h5 id="store-item-name">dougnut item</h5>
                 <h5 class="store-item-value">$ <strong id="store-item-price" class="font-weight-bold">10</strong></h5>
 
               </div>
@@ -424,7 +424,7 @@ https://www.iconfinder.com/korawan_m
         </div>
         <!--end of single store item-->
         <!-- single item -->
-        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item doughnuts" data-item="doughnuts">
+        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item doughnuts" data-item="dougnuts">
           <div class="card ">
             <div class="img-container">
               <img src="img/doughnut-3.jpeg" class="card-img-top store-img" alt="">
@@ -434,7 +434,7 @@ https://www.iconfinder.com/korawan_m
             </div>
             <div class="card-body">
               <div class="card-text d-flex justify-content-between text-capitalize">
-                <h5 id="store-item-name">doughnut item</h5>
+                <h5 id="store-item-name">dougnut item</h5>
                 <h5 class="store-item-value">$ <strong id="store-item-price" class="font-weight-bold">15</strong></h5>
 
               </div>
@@ -451,13 +451,26 @@ https://www.iconfinder.com/korawan_m
   <!--end of store items -->
 
 
+  <!-- modal-container -->
+  <div class="container-fluid ">
+    <div class="row lightbox-container align-items-center">
+      <div class="col-10 col-md-10 mx-auto text-right lightbox-holder">
+        <span class="lightbox-close"><i class="fas fa-window-close"></i></span>
+        <div class="lightbox-item"></div>
+        <span class="lightbox-control btnLeft"><i class="fas fa-caret-left"></i></span>
+        <span class="lightbox-control btnRight"><i class="fas fa-caret-right"></i></span>
+      </div>
+
+    </div>
+  </div>
+
 
   <!-- jquery -->
-  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="./js/jquery-3.3.1.min.js"></script>
   <!-- bootstrap js -->
-  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="./js/bootstrap.bundle.min.js"></script>
   <!-- script js -->
-  <script src="js/my_app.js"></script>
+  <script src="./js/my_app.js"></script>
 </body>
 
 </html>
