12_Tip_form_calculator

--- a/Calculator-JavaScript-Project-master/index.html
+++ b/Calculator-JavaScript-Project-master/index.html
@@ -32,8 +32,8 @@
    <button type="button" class="btn btn-grey" data-num="2">2</button>
    <button type="button" class="btn btn-grey" data-num="1">1</button>
    <button type="button" class="btn btn-grey" data-num="0">0</button>
-   <button type="button" class="btn-equal btn-grey">=</button>
-   <button type="button" class="btn-clear btn-grey">C</button>
+   <button type="button" class="btn-equal" >=</button>
+   <button type="button" class="btn-clear" >C</button>
 
 
   </div>
@@ -48,7 +48,7 @@
 
 
 
- <script src="./app.js"></script>
+ <script src="./my_app.js"></script>
 </body>
 
 </html>
