--- a/Project_Grocery_Cart-master/index.html
+++ b/Project_Grocery_Cart-master/index.html
@@ -54,6 +54,8 @@ https://www.iconfinder.com/korawan_m
           <div id="cart-info" class="nav-info align-items-center cart-info d-flex justify-content-between mx-lg-5">
             <span class="cart-info__icon mr-lg-3"><i class="fas fa-shopping-cart"></i></span>
             <p class="mb-0 text-capitalize"><span id="item-count">2 </span> items - $<span class="item-total">10.49</span></p>
+            
+
           </div>
           <!-- end of single info -->
         </div>
@@ -472,7 +474,7 @@ https://www.iconfinder.com/korawan_m
   <!-- bootstrap js -->
   <script src="js/bootstrap.bundle.min.js"></script>
   <!-- script js -->
-  <script src="js/app.js"></script>
+  <script src="js/my_app.js"></script>
 </body>
 
 </html>
