14_grocery_cart_clean_script

--- a/Project_Grocery_Cart-master/index.html
+++ b/Project_Grocery_Cart-master/index.html
@@ -474,7 +474,7 @@ https://www.iconfinder.com/korawan_m
   <!-- bootstrap js -->
   <script src="js/bootstrap.bundle.min.js"></script>
   <!-- script js -->
-  <script src="js/my_app.js"></script>
+  <script src="js/my_app2.js"></script>
 </body>
 
 </html>
